contrast issues

--- a/pkdesign/css/style.css
+++ b/pkdesign/css/style.css
@@ -324,7 +324,7 @@ body p {
     font-family: 'Crimson Text', Tahoma, Verdana, sans-serif;
     color: rgb(255, 255, 255);
     border: 1px solid rgb(169, 141, 185);
-    background-color: rgb(161, 161, 226);
+    background-color: rgb(86, 86, 160);
     box-shadow: 5px 5px 15px 5px rgb(170, 169, 169);
     padding: 1rem;
     margin: 1rem;
